# hw_project

./: pyproject.toml
myproject/: payments_fixture.json
myproject/courses/: models.py  serializers.py  views.py
myproject/lessons/: models.py  urls.py  views.py
myproject/myproject/: config.py  settings.py  urls.py
myproject/payment/: filters.py  models.py  views.py
myproject/users/: models.py  serializers.py  views.py
myproject/users/migrations/: 0001_initial.py
