[tool.poetry]
name = "hw-project"
version = "0.1.0"
description = ""
authors = ["glebk <glebkot57@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_project"}]

[tool.poetry.dependencies]
python = "^3.11"
router = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
